--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,21 +1,22 @@
 {
   "name": "desktop",
   "version": "1.0.0",
-  "description": "",
+  "description": "PCLR Exam Desktop Application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "electron-packager . pclr_exam_desktop --platform=win32 --arch=x64 --out=dist",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-builder",
     "build": "electron-builder"
   },
   "keywords": [],
-  "author": "",
+  "author": "Noah Oppermann",
   "license": "ISC",
   "devDependencies": {
     "electron": "^30.0.6",
-    "electron-builder": "^24.13.3",
-    "electron-packager": "^17.1.2"
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "electron-builder": "^24.13.3"
   },
   "build": {
     "appId": "com.yourdomain.desktop",
@@ -29,7 +30,8 @@
       "node_modules/**",
       "../**/*.py",
       "../templates/**",
-      "../static/**"
+      "../static/**",
+      "../pclr_exam/dist/**"
     ],
     "extraResources": [
       {
