--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ scipy==1.15.1
 pyinstaller==6.11.1
 pywebview==5.3.2
 waitress==3.0.2
-werkzeug~=3.1.3
 pillow~=11.1.0
 zlib~=1.2.13
 pip~=24.2
@@ -46,3 +45,4 @@ cycler~=0.12.1
 kiwisolver~=1.4.8
 pywin32-ctypes~=0.2.3
 pyinstaller-hooks-contrib~=2025.0
+requests~=2.32.3
